# auto_polymarket

./: .env.example  .gitattributes  .gitignore  5m_trade.py  5m_trade_strategy2.py  README.md  account_change_report.py  app.py  arbitrage_report.py  auto_polymarket.sh  btc_1s_market_monitor.py  btc_5m_market_monitor.py  btc_price_watcher.py  config.py  defiLlama.py  dual_maker_trade.py  email_alert.py  etf_data.py  gemini_prompts.py  gemini_researcher.py  html_generator.py  last_market_sentiment_and_funding.json  monthly_btc_strategy.py  order_func.py  position_analyze.py  position_analyze_gold.py  position_analyze_oil.py  price_warn_config.py  price_warn_config_gold.py  price_warn_config_oil.py  pyproject.toml  recommendation_auto_executor.py  rsi_get.py
ai/: __init__.py  prompts.py  researcher.py
config/: 5m_trade_acc2_params.env  5m_trade_params.env
cross_trade/: README.md  __init__.py  __main__.py  analyze_cross_count_same_side.py  cross_trade_5m.py
data/: __init__.py  advisory_schema.py  binance.py  database.py  defillama.py  deribit.py  etf.py  gamma_api.py  gold.py  m101_all_trades.csv  m101_btc5m_buys.csv  oil.py  polymarket.py  rsi.py  trading_lessons.json
docs/: advisory_runbook.md  backtest_missing_data_exclude_sql.md  deferred_trading_ideas.md  dual_low_bid_strategy_plan.md  m101_vs_deviation_entry_comparison.md  marketing101_strategy_analysis.md  minimal_model_data_plan.md  oil_model_audit_enhancement_checklist.md  strategy_fusion_plan.md
fiber_ob/: README.md  app.py
gold_analyze/: README.md  __init__.py  position_analyze_gold.py
oil_ob/: app.py  (+1 more)
(+228 files in other folders)
