[project]
name = "auto-polymarket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=0.2.0",
    "pandas>=2.3.3",
    "playwright>=1.57.0",
    "py-clob-client>=0.34.5",
    "websocket-client>=1.9.0",
]
