[project]
name = "auto-polymarket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=0.9.9",
    "requests>=2.28.0",
    "google-genai>=0.2.0",
    "pandas>=2.3.3",
    "playwright>=1.57.0",
    "py-clob-client>=0.34.5",
    "websocket-client>=1.9.0",
    "yfinance>=1.1.0",
    "polymarket-apis>=0.4.3",
]
