[project]
name = "auto-polymarket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=0.9.9",
    "requests>=2.28.0",
    "google-genai>=0.2.0",
    "optuna>=3.6.1",
    "pandas>=2.3.3",
    "playwright>=1.57.0",
    "psycopg2-binary>=2.9.9",
    "py-clob-client-v2>=1.0.0",
    "websocket-client>=1.9.0",
    "yfinance>=1.1.0",
    "polymarket-apis>=0.4.3",
    "flask>=3.0.0",
    "duckdb>=1.2.2",
    "py-builder-relayer-client",
]

[tool.uv.sources]
py-builder-relayer-client = { git = "https://github.com/Polymarket/py-builder-relayer-client.git" }
